Fix (almost) all tests
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>